public/css/style.css
body{
    background-color:#BEFFBE;
}
.navbar{
    background: #FFBEBE;
}
.flexbox{
    display:flex;
    flex-direction:column;
    align-items:center;
    margin: 0.5rem;
}
article{
    background-color:black;
    color:#FFFFFF;
    width:20rem;
    text-align:center;
    margin:0.5rem;
}
#hamburgerButton{
    margin-left:0.5rem;
}
/*For screens larger than 769 pixels*/
@media (min-width: 768px){
    body{
        background-color:#BEBEFF;
    }
    article{
        width:50rem;
        margin:0.2rem;
    }
}

